<resources>
    <string name="app_name">OnlineShop</string>

    <string name="home">Home</string>
    <string name="products">Products</string>
    <string name="blog">Blog</string>
    <string name="basket">Basket</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="about">About</string>
    <string name="full_name">Full Name</string>
    <string name="username">(Username)</string>
    <string name="product_category">Product Category</string>
    <string name="new_products">New Products</string>
    <string name="popular_products">Popular Products</string>
    <string name="new_filter">New</string>
    <string name="cheap_products">Cheap Products</string>
    <string name="expensive_products">Expensive Products</string>
    <string name="popular_filter">Popular</string>
    <string name="expensive_filter">Expensive</string>
    <string name="cheap_filter">Cheap</string>
    <string name="twice_back">Please press BACK again to exit</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="lorem">Lorem ipsum dolor sit amet, et ignota possit per, cu sed natum corpora laboramus. Ei nisl lobortis his, cu accusamus intellegat ius. Duo an nihil iuvaret aliquid, et nec cetero delicatissimi. Id mei erroribus expetendis intellegebat, ea his velit honestatis.Adhuc ornatus fierent quo ex, ne malis dolorem pro. Sea animal laboramus at, eam nonumy denique apeirian eu. No alia admodum voluptua nam. Cu quo mundi dignissim adolescens, te his ignota accommodare. Has in probo diceret. Ex usu paulo ludus perfecto, vel assum exerci cu. Ex porro patrioque his, eum an integre apeirian expetendis.Nec ut porro dicunt scripta, cum nullam repudiandae an, ei perfecto urbanitas vis. Est quidam graeco liberavisse in, dolore nostro utamur in pri. Quidam viderer mea et. Ut usu vivendum maiestatis incorrupte. Munere equidem persecuti pri ei, et illum bonorum mea.Ea porro detraxit vim, ne doctus aliquid pro, tempor praesent ad vix. Ancillae scaevola mnesarchum sit ne, per id semper abhorreant. Ne falli meliore prodesset pro, in cum omnesque pericula suavitate, et stet mentitum expetenda vis. Habeo omnesque mel et.</string>
    <string name="personPicture">personPicture</string>
    <string name="productCategory">ProductCategory</string>
    <string name="product">Product</string>
    <string name="shoesPicture">ShoesPicture</string>
    <string name="price">Price$</string>
    <string name="name">Name</string>
    <string name="priceDollar">Price$</string>
    <string name="add_to_card">Add to card</string>
    <string name="_1">1</string>
    <string name="product_product_product_product">Product Product Product Product</string>
    <string name="image_slider">Image_Slider</string>
    <string name="subtitle">Subtitle</string>
</resources>