<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:layout_marginBottom="8dp"
    android:elevation="4dp"
    android:padding="8dp"
    app:cardBackgroundColor="#FFFCFC"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageView
            android:id="@+id/blog_image"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_marginEnd="7dp"
            android:layout_weight="1"
            android:contentDescription="@string/personPicture"
            android:scaleType="centerCrop"
            android:src="@drawable/shoes" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:orientation="vertical">

            <TextView
                android:id="@+id/blog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/blog_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitle"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>