<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetailsActivity">

    <LinearLayout
        android:id="@+id/product_detail_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="480dp"
                android:scaleType="centerCrop"
                android:src="@drawable/shoes"
                android:transitionName="product_image" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-25dp"
            android:layout_marginBottom="-15dp"
            android:background="@color/colorWhite"
            android:elevation="8dp"
            android:textAlignment="center"
            app:cardCornerRadius="25dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="30dp"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <TextView
                        android:id="@+id/product_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight="3"
                        android:gravity="left"
                        android:text="Name"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="24dp"
                        android:transitionName="product_name" />

                    <TextView
                        android:id="@+id/product_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="Price$"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24dp"
                        android:transitionName="product_price" />
                </LinearLayout>

                <TextView
                    android:id="@+id/product_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/lorem"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="30dp"
                        android:text="@string/size"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="26dp" />

                    <HorizontalScrollView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/chip_product_sizes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:singleLine="true"
                            app:singleSelection="true" />
                    </HorizontalScrollView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="30dp"
                        android:text="@string/color"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="26dp" />

                    <HorizontalScrollView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/chip_product_colors"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:singleLine="true"
                            app:singleSelection="true" />
                    </HorizontalScrollView>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_add_to_card"
                    android:layout_width="300dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/button_shape"
                    android:text="Add to card"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>